 
    You will finish reading and understanding in a matter of minutes.
    
    Changelog from MyCollab 4.3.2
    =============================
    Improvements
        - Update Japanese localization
        - Update mobile module
        - Support chart localization
        - Improve page template
        - Upgrade Vaadin to 7.2.6
    
    Bug Fixes
        - Remove border of Create Project button
        - Fix assignment table header misses border
        - Fix several broken unit tests
        - Fix css issues of email template
        - Edit project view is not consistent to other views
        - Can not display Japanese in several servlets
    
    Changelog from MyCollab 4.3.1
    =============================
    Improvements
        - Update Japanese localization
        - Upgrade Jasypt library up to 1.9.2
        - Upgrade Vaadin to 7.2.5
        - Upgrade Spring framework to 4.0.6.RELEASE
        - Add the generic search module by using Solr
        - Add permission review when user select role
        - Simplify servlet error handler
        
    Bug Fixes
        - Add more tracked fields in version notification email.
        - Fixed NPE when browser cookie is disabled.
        - Fixed bug view render wrongly in some rare cases.
        - Fixed overflow tooltip title if it is too long
        - Minor bug fix of project activity stream
        - Fixed confirm dialog body text size calculation wrongly
        - Validate email fails in several email formats
        - Fix bug view layout display wrongly in several cases
        - Email misspelling issues
    
    
    Changelog from MyCollab 4.3.0
    =============================
    Improvements
        - Upgrade Reflections to 0.9.9-RC2
        - Upgrade Guava to 15.0
        - Support Japanese in reporting
        - Internalization reporting module
        - Improve UIs
        - Update mobile edition
    
    Bug Fixes
        - Can not save user in some special case