@@ -61,5 +61,12 @@ public enum ProjectCommonI18nEnum {
 	VIEW_NOTIFICATION_SETTINGS,
 
 	TAB_COMMENT,
-	TAB_HISTORY
+	TAB_HISTORY,
+	
+	SUB_INFO_PEOPLE,
+	ITEM_CREATED_DATE,
+	ITEM_UPDATED_DATE,
+	SUB_INFO_DATES,
+	ITEM_CREATED_PEOPLE,
+	ITEM_ASSIGN_PEOPLE
 }
