@@ -52,5 +52,12 @@ public enum TimeTrackingI18nEnum {
 	THURSDAY_FIELD,
 	FRIDAY_FIELD,
 	SATURDAY_FIELD,
-	SUNDAY_FIELD
+	SUNDAY_FIELD,
+	
+	SUB_INFO_TIME,
+	OPT_BILLABLE_HOURS,
+	OPT_NON_BILLABLE_HOURS,
+	OPT_REMAIN_HOURS,
+	OPT_TOTAL_SPENT_HOURS,
+	OPT_REMAINING_WORK_HOURS
 }
