@@ -35,3 +35,11 @@ VIEW_NOTIFICATION_SETTINGS=Notification Settings
 
 TAB_COMMENT=Comments
 TAB_HISTORY=History
+
+SUB_INFO_DATES=Dates
+ITEM_CREATED_DATE=Created: {0}
+ITEM_UPDATED_DATE=Updated: {0}
+
+SUB_INFO_PEOPLE=People
+ITEM_CREATED_PEOPLE=Created: 
+ITEM_ASSIGN_PEOPLE=Assignee:
