@@ -30,3 +30,9 @@ VIEW_ROLES=役割
 VIEW_NOTIFICATION_SETTINGS=お知らせ
 TAB_COMMENT=コメント
 TAB_HISTORY=履歴
+SUB_INFO_DATES=日付
+ITEM_CREATED_DATE=作成: {0}
+ITEM_UPDATED_DATE=更新した: {0}
+SUB_INFO_PEOPLE=人々
+ITEM_CREATED_PEOPLE=作成: 
+ITEM_ASSIGN_PEOPLE=責任者: 
