@@ -25,3 +25,10 @@ THURSDAY_FIELD=Thursday({0})
 FRIDAY_FIELD=Friday({0})
 SATURDAY_FIELD=Saturday({0})
 SUNDAY_FIELD=Sunday({0})
+
+SUB_INFO_TIME=Time
+OPT_BILLABLE_HOURS=Billable Hours: %.2f
+OPT_NON_BILLABLE_HOURS=Non-Billable Hours: %.2f
+OPT_REMAIN_HOURS=Remaining Hours: %.2f
+OPT_TOTAL_SPENT_HOURS=Total Spent Hours
+OPT_REMAINING_WORK_HOURS=Remaining Work Hours
