@@ -23,3 +23,9 @@ THURSDAY_FIELD=木曜日({0})
 FRIDAY_FIELD=金曜日({0})
 SATURDAY_FIELD=土曜日({0})
 SUNDAY_FIELD=日曜日({0})
+SUB_INFO_TIME=時間
+OPT_BILLABLE_HOURS=Billable Hours: %.2f
+OPT_NON_BILLABLE_HOURS=Non-Billable Hours: %.2f
+OPT_REMAIN_HOURS=Remaining Hours: %.2f
+OPT_TOTAL_SPENT_HOURS=Total Spent Hours
+OPT_REMAINING_WORK_HOURS=Remaining Work Hours
