@@ -47,6 +47,7 @@
         - Support chart localization
         - Improve page template
         - Upgrade Vaadin to 7.2.6
+        - Improve UIs of project views
     
     Bug Fixes
         - Remove border of Create Project button
